// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-10">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-20 rsg--inheritSize-21 rsg--baseColor-25">
  Hello
  <em class="rsg--text-20 rsg--inheritSize-21 rsg--baseColor-25 rsg--em-27">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-12">
    <h1 class="rsg--heading-13 rsg--heading1-14">
      Header
    </h1>
  </div>
  <p class="rsg--para-10">
    Text with
    <em class="rsg--text-20 rsg--inheritSize-21 rsg--baseColor-25 rsg--em-27">
      some
    </em>
    <strong class="rsg--text-20 rsg--inheritSize-21 rsg--baseColor-25 rsg--strong-28">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-11"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-10">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-36">
  <p class="rsg--para-10">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--list-30">
  <li class="rsg--li-32">
    <input type="checkbox"
           readonly
           class="rsg--input-33"
    >
    list 1
  </li>
  <li class="rsg--li-32">
    <input type="checkbox"
           readonly
           class="rsg--input-33"
    >
    list 2
  </li>
  <li class="rsg--li-32">
    <input type="checkbox"
           checked
           readonly
           class="rsg--input-33"
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-34">
  <code class="lang-html rsg--code-35">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-12">
    <h1 class="rsg--heading-13 rsg--heading1-14">
      one
    </h1>
  </div>
  <div class="rsg--spacing-12">
    <h2 class="rsg--heading-13 rsg--heading2-15">
      two
    </h2>
  </div>
  <div class="rsg--spacing-12">
    <h3 class="rsg--heading-13 rsg--heading3-16">
      three
    </h3>
  </div>
  <div class="rsg--spacing-12">
    <h4 class="rsg--heading-13 rsg--heading4-17">
      four
    </h4>
  </div>
  <div class="rsg--spacing-12">
    <h5 class="rsg--heading-13 rsg--heading5-18">
      five
    </h5>
  </div>
  <div class="rsg--spacing-12">
    <h6 class="rsg--heading-13 rsg--heading6-19">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-10">
  Foo
  <code class="rsg--code-35">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-10">
  a
  <a href="http://test.com"
     class="rsg--link-11"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--list-30">
  <li class="rsg--li-32">
    list 1
  </li>
  <li class="rsg--li-32">
    list 2
    <ol class="rsg--list-30 rsg--ordered-31">
      <li class="rsg--li-32">
        Sub-list
      </li>
      <li class="rsg--li-32">
        Sub-list
      </li>
      <li class="rsg--li-32">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-32">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--list-30 rsg--ordered-31">
  <li class="rsg--li-32">
    list
  </li>
  <li class="rsg--li-32">
    item
  </li>
  <li class="rsg--li-32">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--list-30">
  <li class="rsg--li-32">
    list
  </li>
  <li class="rsg--li-32">
    item
  </li>
  <li class="rsg--li-32">
    three
  </li>
</ul>

`;
